[gd_scene load_steps=3 format=3 uid="uid://daetslgk0a1cs"]

[ext_resource type="Script" path="res://core/miscs/damage/scripts/hit_box.gd" id="1_vkcoj"]

[sub_resource type="SphereShape3D" id="SphereShape3D_8qrur"]

[node name="HitBox" type="Area3D"]
collision_layer = 16
collision_mask = 32
input_ray_pickable = false
script = ExtResource("1_vkcoj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_8qrur")

[node name="HitEffect" type="AudioStreamPlayer3D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
